--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<li>CCNA Routing and Switching: Introduction to Networks Certification.</li>
 		<li>CCNA Routing and Switching: Routing and Switching Essentials Certification.</li>
 		<li>CCNAv7 Switching, Routing and Wireless Essentials Certification.</li>
-		<li>CCNAv7 Enterprise Networking, Security and Automatio.</li>
+		<li>CCNAv7 Enterprise Networking, Security and Automation.</li>
             </ul>
         </div>
 
